Fix alignment issues

--- a/src/templates/blog-post.module.scss
+++ b/src/templates/blog-post.module.scss
@@ -47,6 +47,9 @@ code {
   font-size: 0.9em;
   border-radius: 0.2em;
   white-space: nowrap;
+    code {
+    padding: 0;
+  }
 }
 
 /*
